--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -36,13 +36,13 @@
 	        <ul class="nav navbar-nav navbar-center">
 	            <li class="nav-item">
 	                <div class="dropdownatuo">
-	                    <button class="dropbtn">교육원소개
+	                    <button class="dropbtn">#교육원소개
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">교육원소개1</a>
-	                        <a href="#">교육원소개2</a>
-	                        <a href="#">교육원소개3</a>
+	                        <a href="#">#교육원소개1</a>
+	                        <a href="#">#교육원소개2</a>
+	                        <a href="#">#교육원소개3</a>
 	                    </div>
 	                </div>
 	            </li>
@@ -52,22 +52,22 @@
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                    	<a th:href="@{'/PI/Lecture/subjectList?institutionCode='+${institutionCode}}">강의/과목 조회</a>
-	                        <a href="#">강의소개 1</a>
-	                        <a href="#">강의소개 2</a>
-	                        <a href="#">강의소개 3</a>
+	                    	<a th:href="@{'/PI/subject/subjectList?institutionCode='+${institutionCode}}">강의/과목 조회</a>
+	                        <a href="#">#강의소개 1</a>
+	                        <a href="#">#강의소개 2</a>
+	                        <a href="#">#강의소개 3</a>
 	                    </div>
 	                </div>
 	            </li>
 	            <li class="nav-item">
 	                <div class="dropdownatuo">
-	                    <button class="dropbtn">자격증소개 
+	                    <button class="dropbtn">#자격증소개 
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                        <a href="#">자격증소개 1</a>
-	                        <a href="#">자격증소개 2</a>
-	                        <a href="#">자격증소개 3</a>
+	                        <a href="#">#자격증소개 1</a>
+	                        <a href="#">#자격증소개 2</a>
+	                        <a href="#">#자격증소개 3</a>
 	                    </div>
 	                </div>
 	            </li>
