[김기남] 자격 개요 및 시험 장소 등록 수정

--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -17,8 +17,8 @@
 	<ul>
 		<li><a href="/association/license/addLicenseTestLocation">자격시험 장소 등록</a></li>
 		<li><a href="/association/license/LicenseTestLocationList">자격시험 장소 조회</a></li>
-		<li><a href="">자격시험 장소 수정</a></li>
-		<li><a href="">자격시험 장소 삭제</a></li>
+		<li>#<a href="">자격시험 장소 수정</a></li>
+		<li>#<a href="">자격시험 장소 삭제</a></li>
 		
 	</ul>
 
@@ -26,8 +26,8 @@
 	<ul>
 		<li><a href="/association/license/addInfoQualification">자격증 등록</a></li>
 		<li><a href="/PI/infoQualificationList">자격증 조회</a></li>
-		<li><a href="">자격증 수정</a></li>
-		<li><a href="">자격증 삭제</a></li>
+		<li>#<a href="">자격증 수정</a></li>
+		<li>#<a href="">자격증 삭제</a></li>
 
 	</ul>
 	
