[한병권] PA로그인 처리 완료

--- a/lms/src/main/resources/templates/institution/institutionLogin.html
+++ b/lms/src/main/resources/templates/institution/institutionLogin.html
@@ -20,6 +20,7 @@
 <div layout:fragment="content">
 	<div>
 		<p style="height: 100px"></p>
+		<h3 th:text="${session.availability}"></h3>
 		<form action="/institutionLogin" method="post">
 			<fieldset>
 				<div class="form-group">
