[이순곤]학생이 교육원평가

--- a/lms/src/main/resources/templates/PI/myPage/evaluation.html
+++ b/lms/src/main/resources/templates/PI/myPage/evaluation.html
@@ -24,6 +24,7 @@
 		<a href="#" class="list-group-item list-group-item-action">#1:1 상담게시판</a>
 		<a th:href="@{'/PI/myPage/evaluation?institutionCode='+${institutionCode}}" class="list-group-item list-group-item-action">교육원/강의평가</a>
 	</div>
+	ㅋㅋㅋㅋㅋ
 	<div class="col-sm-8 list-group"></div>	
 </div>
 	<p style="height: 200px"></p>
