--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -32,24 +32,29 @@
 	</ul>
 	
 
-	<h1>협회 : 강의관리</h1>
-	<h3>강의 관리</h3>
-	<ul>
-		<li><a href="/association/subject/addSubject">과목 등록</a></li>
-		<li><a href="/association/subject/subjectList">과목 조회</a></li>
-		<li><a href="/association/subject/modifySubject">#과목 관리</a></li>
-	</ul>
+	<h1>협회 : 교육원관리</h1>
 	<h3>교육원 관리</h3>
 	<ul>
 		<li><a href="/association/institution/addInstitution">교육원 등록</a></li>
-		<li><a href="/association/institution/institutionList">교육원 조회</a></li>
-		<li><a href="/association/institution/modifyInstitution">#교육원 관리</a></li>
+		<li><a href="/association/institution/institutionList">교육원 조회 및 관리</a></li>
 	</ul>
+	
+	<h1>협회 : 강의관리</h1>
+	<h3>강의 관리</h3>
+	<ul>	
+		<li><a href="/association/lecture/addNoticeLecture">강의공고 등록</a></li>
+		<li><a href="/association/lecture/noticeLectureList">강의공고 목록조회 및 관리</a></li>
+		<li><a href="/association/lecture/addInfoLecture">강의표준 등록</a></li>
+		<li><a href="/association/lecture/infoLectureList">강의표준 조회 및 관리</a></li>
+		<li><a href="/association/lecture/addSubject">과목 등록</a></li>
+		<li><a href="/association/lecture/subjectList">과목 조회 및 관리</a></li>
+	</ul>
+	
+	<h1>협회 : 강의실관리</h1>
 	<h3>강의실 관리</h3>
 	<ul>
 		<li><a href="/association/classroom/searchInstitution">강의실 등록</a></li>
-		<li><a href="/association/classroom/classroomList">강의실 조회</a></li>
-		<li><a href="/association/classroom/modifyClassroom">#강의실 관리</a></li>
+		<li><a href="/association/classroom/classroomList">강의실 조회 및 관리</a></li>
 	</ul>
 	
 
