--- a/lms/src/main/resources/templates/association/classroom/classroomList.html
+++ b/lms/src/main/resources/templates/association/classroom/classroomList.html
@@ -14,10 +14,10 @@ $(document).ready(function(){
 	// 교육원 목록
     $('#search').click(function(){
         console.log('교육원 검색버튼 클릭...');
-        console.log('입력받은 교육원 위치 : '+$('#instName').val());
+        console.log('입력받은 교육원 위치 : '+$('#classroomLocation').val());
         $.ajax({
-            url:'/getInstitutionList'
-            ,data:{instName:$('#instName').val()}
+            url:'/association/getClassroomList'
+            ,data:{classroomLocation:$('#classroomLocation').val()}
             ,type:'POST'
     		,dataType:'json'
             ,success:function(result){ 
@@ -25,18 +25,21 @@ $(document).ready(function(){
 				$('#classroomList').append('<thead>');
 				$('#classroomList').append('<tr>');
 				$('#classroomList').append('<th>교육원명</th>');
-				$('#classroomList').append('<th>교육원위치</th>');
+				$('#classroomList').append('<th>강의실 위치</th>');
+				$('#classroomList').append('<th>강의실명</th>');
+				$('#classroomList').append('<th>강의실 용도</th>');
+				$('#classroomList').append('<th>최대수용인원</th>');
 				$('#classroomList').append('</tr>');
 				$('#classroomList').append('</thead>');
 				$('#classroomList').append('<tbody>');
                 $(result).each(function(i,item){	
-               	   $('#classroomList').append('<tr><td id="'+item.institutionCode+'" value="'+item.institutionCode+'"><a href="/association/classroom/modifyClassroom?institutionCode='+item.institutionCode+'">'+item.institutionName+'</a></td><td id="'+item.institutionLocation+'" value="'+item.institutionLocation+'">'+item.institutionLocation+'</td></tr>');
+               	   $('#classroomList').append('<tr><td>'+item.institutionName+'</td><td>'+item.classroomLocation+'</td><td><a href="/association/classroom/detailClassroom?classroomCode='+item.classroomCode+'">'+item.classroomName+'</a></td><td>'+item.classroomUse+'</td><td>'+item.classroomMaximumNumber+'</td></tr>');
                 });
                 $('#classroomList').append('</tbody>');
              }
         });
     });	
-   $("#instName").keydown(function(key) {
+   $("#classroomLocation").keydown(function(key) {
         //키의 코드가 13번일 경우 (13번은 엔터키)
         if (key.keyCode == 13) {
         	console.log('엔터키 입력..');
@@ -54,7 +57,7 @@ $(document).ready(function(){
 		<h4 style="color:red">도시명으로 검색하실 수 있습니다  </h4>
 		<h6> ex) 서울, 전주....</h6>
 		
-		<input id="instName" name="instName" type="text">
+		<input id="classroomLocation" name="classroomLocation" type="text">
 		<button id="search" type="button">search</button>
 	</div>
 	
@@ -74,7 +77,7 @@ $(document).ready(function(){
 				<tr th:each="list:${classroomList}">
 					<td th:text="${list.institutionName}" th:value="${list.institutionName}"></td>
 					<td th:text="${list.classroomLocation}" th:value="${list.classroomLocation}"></td>
-					<td th:text="${list.classroomName}" th:value="${list.classroomName}"></td>
+					<td><a th:href="@{'/association/classroom/detailClassroom?classroomCode='+${list.classroomCode}}" th:text="${list.classroomName}" th:value="${list.classroomName}"></a></td>
 					<td th:text="${list.classroomUse}" th:value="${list.classroomUse}"></td>
 					<td th:text="${list.classroomMaximumNumber}" th:value="${list.classroomMaximumNumber}"></td>
 				</tr>
