--- a/lms/src/main/resources/templates/fragments/header.html
+++ b/lms/src/main/resources/templates/fragments/header.html
@@ -52,7 +52,7 @@
 	                        <i class="fa fa-caret-down"></i>
 	                    </button>
 	                    <div class="dropdownatuo-content">
-	                    	<a th:href="@{'/PI/subject/subjectList?institutionCode='+${institutionCode}}">강의/과목 조회</a>
+	                    	<a th:href="@{'/PI/lecture/subjectList?institutionCode='+${institutionCode}}">강의/과목 조회</a>
 	                        <a href="#">#강의소개 1</a>
 	                        <a href="#">#강의소개 2</a>
 	                        <a href="#">#강의소개 3</a>
