[나현주] 권한별 Login 화면 -> 회원가입버튼만 생성 교육원별 회원 list 출력 institutionTop 내정보 링크 연결 강사등록 코드 이메일전송

--- a/lms/src/main/resources/templates/institution/institutionIndex.html
+++ b/lms/src/main/resources/templates/institution/institutionIndex.html
@@ -12,10 +12,16 @@
 </th:block>
 
 <div layout:fragment="content">
-	<h1>교육원 : 강의관리</h1>
-	<a href="/institution/subject/subjectList">과목 조회</a>
-	<a href="/institution/#">#강의 조회</a>
-	<h1>교육원 : 회원관리</h1>
-	<a href="/institution/memberList">회원 조회</a>
+	<h2>교육원 : 강의관리</h2>
+	<ul>
+		<li><a href="/institution/subject/subjectList">과목 조회</a></li>
+		<li><a href="/institution/#">#강의 조회</a></li>
+	</ul>
+	<h2>교육원 : 회원관리</h2>
+	<ul>
+		<li><a href="/institution/memberList">회원 조회</a></li>
+		<li><a href="/sendteacher">강사승인코드전송</a></li>
+		
+	</ul>
 </div>
 </html>
