--- a/lms/src/main/resources/templates/teacher/teacherLogin.html
+++ b/lms/src/main/resources/templates/teacher/teacherLogin.html
@@ -15,12 +15,12 @@
 
 <!-- html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+
 </th:block>
 
 <div layout:fragment="content">
 	<div>
 		<p style="height: 100px"></p>
-		<h4>강사 로그인</h4>
 		<form action="/teacherLogin" method="post">
 			<fieldset>
 				<div class="form-group">
@@ -42,7 +42,7 @@
     	    		</div>
 	        		<div class="col-sm-6"></div>
       			</div>
-				<button type="submit" class="btn btn-info">로그인</button>
+				<button type="submit" class="btn btn-info">로그인</button><button type="button" class="btn btn-outline-success">#강사등록</button>
 			</fieldset>
 		</form>
 		<p style="height: 300px"></p>
