--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -51,7 +51,11 @@
 		<li><a href="/association/classroom/classroomList">강의실 조회</a></li>
 		<li><a href="/association/classroom/modifyClassroom">#강의실 관리</a></li>
 	</ul>
-	
+	<h3>승인코드 전송</h3>
+	<ul>
+		<li>#<a href="#">강사승인코드 전송</a></li>
+		<li>#<a href="#">강사승인코드 전송</a></li>
+	</ul>
 
 </div>
 </html>
