--- a/lms/src/main/resources/templates/fragments/institutionTop.html
+++ b/lms/src/main/resources/templates/fragments/institutionTop.html
@@ -22,7 +22,7 @@
 	                <a class="nav-link" href="/logout">로그아웃</a>
 	            </li>
 	            <li class="nav-item">
-	                <a class="nav-link" href="#">내정보</a>
+	                <a class="nav-link" href="/instMyInfo">내정보</a>
 	            </li>
 	        </ul>
 	    </div>
