--- a/lms/src/main/resources/templates/sendEmailToTeacher.html
+++ b/lms/src/main/resources/templates/sendEmailToTeacher.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default">
+      layout:decorator="layout/root">
 <meta charset="utf-8">
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
