--- a/lms/src/main/resources/templates/teacher/member/insertTeacher.html
+++ b/lms/src/main/resources/templates/teacher/member/insertTeacher.html
@@ -6,21 +6,33 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/sandstone/bootstrap.min.css">
 </head>
 <body>
+<!-- 간격조정 -->
+<div class="row">
+<div class="col-sm-2"></div>
+<div class="col-sm-8">
 <div class="jumbotron">
   <h1 class="display-3">강사 등록</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <p class="lead">강사로 채용 확정되신 분들만 가입을 할 수 있습니다. </p>
   <hr class="my-4">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="#" role="button">회원 가입</a>
   </p>
 </div>
-<!-- <div class="card border-info mb-3" style="max-width: 20rem;">
+</div>
+<div class="col-sm-2"></div>
+</div>
+<!-- <div class="row">
+<div class="col-xl-2"></div>
+<div class="col-xl-8"></div>
+<div class="card border-info mb-3" style="max-width: 20rem;">
 	<h1 class="card-header">강사 등록</h1>
   <div class="card-body">
     <h4 class="card-title">Info card title</h4>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
+<div class="col-xl-2"></div>
+</div>
 </div> -->
 </body>
 </html>
