[나현주] 교육원 관리자 회원가입 화면 : insertInstAdmin.html 교육원 관리자 승인코드 전송 화면 : sendEmailToAdmin.html 강사 회원 VO 생성 : TeacherMember.java 강사 회원 Mapper 생성 : TeacherMemberMapper (interface/xml) 강사 회원가입화면 / 교육원 index/ 교육원 login / 교육원 멤버 컨트롤러 sendEmailToTeacher 등수정

--- a/lms/src/main/resources/templates/institution/institutionIndex.html
+++ b/lms/src/main/resources/templates/institution/institutionIndex.html
@@ -20,8 +20,8 @@
 	<h2>교육원 : 회원관리</h2>
 	<ul>
 		<li><a href="/institution/memberList">회원 조회</a></li>
-		<li><a href="/sendteacher">강사승인코드전송</a></li>
-		
+		<li><a href="/sendTeacher">강사 승인코드 전송</a></li>
+		<li><a href="/sendAdmin">직원 승인코드 전송</a></li>
 	</ul>
 </div>
 </html>
