--- a/lms/src/main/resources/templates/sendEmailToTeacher.html
+++ b/lms/src/main/resources/templates/sendEmailToTeacher.html
@@ -13,7 +13,7 @@
 
 <div layout:fragment="content">
 	<h3>강사 승인 코드 발송</h3>
-	<form action="/sendEmailToTeacher" method="post">
+	<form action="/sendEmailToAdmin" method="post">
 		E-mail : 
 		<input type="text" name="emailAddress">
 		<input type="submit" value="전송하기">
