--- a/lms/src/main/resources/templates/institution/institutionLogin.html
+++ b/lms/src/main/resources/templates/institution/institutionLogin.html
@@ -42,7 +42,7 @@
     	    		</div>
 	        		<div class="col-sm-6"></div>
       			</div>
-				<button type="submit" class="btn btn-info">로그인</button><button type="button" class="btn btn-outline-info">#교육원직원등록</button>
+				<button type="submit" class="btn btn-info">로그인</button><button type="button" onclick="location.href='/insertInstAdmin'" class="btn btn-outline-info">교육원직원등록</button>
 			</fieldset>
 		</form>
 		<p style="height: 300px"></p>
