--- a/lms/src/main/resources/templates/teacher/member/insertTeacher.html
+++ b/lms/src/main/resources/templates/teacher/member/insertTeacher.html
@@ -61,118 +61,124 @@
 	<div class="col-sm-2"></div>
 	<div class="col-sm-8">
 		<div class="jumbotron">
-			<h1 class="display-3">강사 등록</h1>
-			<p class="lead">강사로 채용 확정되신 분들만 가입을 할 수 있습니다. </p>
+			<h1 class="display-3">강사 등록</h1><!-- 	제목	 -->
+			<!-- <p class="lead">강사로 채용 확정되신 분들만 가입을 할 수 있습니다. </p> -->
 			<hr class="my-4">
-			<!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p> -->
+			<p>강사로 채용 확정되신 분들만 가입을 할 수 있습니다.</p>
 			<p class="lead">
-			<form action="/memberInsert" method="post">
-		<fieldset>
-    		<div class="form-group">
-    			<legend>회원정보</legend>
-    		</div>
-    		<div class="form-group">
-    			
-    			<div class="col-sm-5">
-					<label for="InputId">아이디</label>
-					<input type="text" class="form-control" id="memberOnlineId" name="memberOnlineId" aria-describedby="" placeholder="ID" value="">
-    	  			<small class="form-text text-muted">영문/숫자 아이디 중복검사 확인 필수</small>
-      			</div>
-			</div>
-			<div class="form-group">
-				<div class="col-sm-5">
-					<label for="InputPw">비밀번호</label>
-					<input type="password" class="form-control" id="memberOnlinePw" name="memberOnlinePw" aria-describedby="" placeholder="PASSWORD" value="">
-      				<small class="form-text text-muted">영문/숫자 조합으로 8-16자 </small>
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-sm-5">
-					<label for="InputName">이름</label>
-					<input type="text" class="form-control" id="memberName" name="memberName" aria-describedby="" placeholder="NAME" value="">
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-sm-5">
-					<label for="InputRegistrationNumber">주민번호</label>
-					<div class="row">
-						<div class="col-sm-6">
-							<input type="text" class="form-control" id="memberRegistrationNumberFront" name="memberRegistrationNumberFront" aria-describedby="" placeholder="RegistrationNumberFront" value="" size="4"> 
-						</div>
-						<div class="col-sm-6">
-							<input type="password" class="form-control" id="memberRegistrationNumberBack" name="memberRegistrationNumberBack" aria-describedby="" placeholder="RegistrationNumberBack" value="1001000" size="5">
+			<form action="/insertTeacher" method="post">
+				<fieldset>
+    				<div class="form-group">
+    				<legend>회원정보</legend>
+    				</div>
+    				<!-- 	아이디	 -->
+    				<div class="form-group">
+    					<div class="col-sm-5">
+							<label for="InputId">아이디</label>
+							<input type="text" class="form-control" id="memberOnlineId" name="memberOnlineId" aria-describedby="" placeholder="ID" value="">
+    		  				<small class="form-text text-muted">영문/숫자 아이디 중복검사 확인 필수</small>
+      					</div>
+					</div>
+					<!-- 	비밀번호	 -->
+					<div class="form-group">
+						<div class="col-sm-5">
+							<label for="InputPw">비밀번호</label>
+							<input type="password" class="form-control" id="memberOnlinePw" name="memberOnlinePw" aria-describedby="" placeholder="PASSWORD" value="">
+		      				<small class="form-text text-muted">영문/숫자 조합으로 8-16자 </small>
 						</div>
 					</div>
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-sm-5">
-					<label for="InputPhone">전화번호</label>
-					<input type="tel" class="form-control" name="memberPhoneNumber" aria-describedby="" value="010-1234-1234">
-					<small class="form-text text-muted">ex) 010-0000-0000 </small>
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-sm-5">
-					<label for="InputAddress">주소</label>
-					<div class="row">
-						<div class="col-sm-4">
-							<input type="text" readonly="readonly" class="form-control" maxlength="14" id="memberPostcode" name="memberPostcode" size="4">
-						</div>
-						<div class="col-sm-8">
-							<input type="button" class="btn btn-outline-info" onclick="sample6_execDaumPostcode()" value="우편번호찾기"><br>
+					<!-- 	이름	 -->
+					<div class="form-group">
+						<div class="col-sm-5">
+							<label for="InputName">이름</label>
+							<input type="text" class="form-control" id="memberName" name="memberName" aria-describedby="" placeholder="NAME" value="">
 						</div>
 					</div>
-						<input id="memberAddress" name="memberAddress" class="form-control" placeholder="도로명주소" readonly="readonly" value="" type="text" size="30"/><br>
-					<div class="row">
-						<div class="col-sm-8">
-							<input id="memberAddressDesc" name="memberAddressDesc" class="form-control" value="2층 한국스마트정보교육원" placeholder="상세주소" type="text"/>
-						</div>
-						<div class="col-sm-4">
-							<input type="text" id="sample6_extraAddress" size="7" class="form-control" placeholder="참고항목">
+					<!-- 	주민번호	 -->
+					<div class="form-group">
+						<div class="col-sm-5">
+							<label for="InputRegistrationNumber">주민번호</label>
+							<div class="row">
+								<div class="col-sm-6">
+									<input type="text" class="form-control" id="memberRegistrationNumberFront" name="memberRegistrationNumberFront" aria-describedby="" placeholder="RegistrationNumberFront" value="" size="4"> 
+								</div>
+								<div class="col-sm-6">
+									<input type="password" class="form-control" id="memberRegistrationNumberBack" name="memberRegistrationNumberBack" aria-describedby="" placeholder="RegistrationNumberBack" value="1001000" size="5">
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-				<!-- 회원등급 -->
-				<input type="hidden" name="memberRank" value="수강생">
-			<div class="form-group">
-				<div class="col-sm-5">
-					<label for="InputInstitution">교육원</label>
-					<select class="form-control" name="institutionCode">
-						<option value="">--교육원선택--</option>
-						<option value="I1">전주평생교육원</option>
-						<option value="I2">서울평생교육원</option>
-						<option value="I3">성남평생교육원</option>
-						<option value="I4">인천평생교육원</option>
-						<option value="I5">광주평생교육원</option>
-						<option value="I6">구미평생교육원</option>
-					</select>
-				</div>
-			</div>
-			<p style="height: 10px"></p>
-			<div class="form-group">
-				<button type="submit" class="btn btn-primary">회원등록</button> <button type="button" class="btn btn-secondary disabled" onclick="location.href='javascript:history.back()'">뒤로가기</button>
-			</div>
-		</fieldset>
-</form>
-				<!-- <a class="btn btn-primary btn-lg" href="#" role="button">회원 가입</a> -->
-			</p>
+					<!-- 	강사코드	 -->
+					<div class="form-group">
+						<div class="col-sm-5">
+							<label for="InputTeacherApproval">강사코드</label>
+							<input type="text" class="form-control" id="teacherApprovalCode" name="teacherApprovalCode" aria-describedby="" placeholder="TeacherApproval" value="">
+							<small class="form-text text-muted">발급받은 강사코드를 입력하세요</small>
+						</div>
+					</div>
+					<!-- 	경력사항	 -->
+					<div class="form-group">
+						<div class="col-sm-5">
+							<label for="exampleTextarea">경력사항</label>
+      						<textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+      					</div>
+      				</div>
+					<!-- 	전화번호	 -->
+					<div class="form-group">
+						<div class="col-sm-5">
+							<label for="InputPhone">전화번호</label>
+							<input type="tel" class="form-control" name="memberPhoneNumber" aria-describedby="" value="010-1234-1234">
+							<small class="form-text text-muted">ex) 010-0000-0000 </small>
+						</div>
+					</div>
+					<!-- 	주소	 -->
+					<div class="form-group">
+						<div class="col-sm-5">
+							<label for="InputAddress">주소</label>
+							<div class="row">
+								<div class="col-sm-4">
+									<input type="text" readonly="readonly" class="form-control" maxlength="14" id="memberPostcode" name="memberPostcode" size="4">
+								</div>
+								<div class="col-sm-8">
+									<input type="button" class="btn btn-outline-info" onclick="sample6_execDaumPostcode()" value="우편번호찾기"><br>
+								</div>
+							</div>
+								<input id="memberAddress" name="memberAddress" class="form-control" placeholder="도로명주소" readonly="readonly" value="" type="text" size="30"/><br>
+							<div class="row">
+								<div class="col-sm-8">
+									<input id="memberAddressDesc" name="memberAddressDesc" class="form-control" value="2층 한국스마트정보교육원" placeholder="상세주소" type="text"/>
+								</div>
+								<div class="col-sm-4">
+									<input type="text" id="sample6_extraAddress" size="7" class="form-control" placeholder="참고항목">
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--	 회원등급	 -->
+					<input type="hidden" name="memberRank" value="강사">
+					<div class="form-group">
+						<div class="col-sm-5">
+							<label for="InputInstitution">교육원</label>
+							<select class="form-control" name="institutionCode">
+								<option value="">--교육원선택--</option>
+								<option value="I1">전주평생교육원</option>
+								<option value="I2">서울평생교육원</option>
+								<option value="I3">성남평생교육원</option>
+								<option value="I4">인천평생교육원</option>
+								<option value="I5">광주평생교육원</option>
+								<option value="I6">구미평생교육원</option>
+							</select>
+						</div>
+					</div>
+					<p style="height: 10px"></p>
+					<div class="form-group">
+					<button type="button" class="btn btn-primary">#강사등록</button> <button type="button" class="btn btn-secondary disabled" onclick="location.href='javascript:history.back()'">뒤로가기</button>
+					</div>
+				</fieldset>
+			</form>
 		</div>
 	</div>
 	<div class="col-sm-2"></div>
 </div>
-<!-- <div class="row">
-<div class="col-xl-2"></div>
-<div class="col-xl-8"></div>
-<div class="card border-info mb-3" style="max-width: 20rem;">
-	<h1 class="card-header">강사 등록</h1>
-  <div class="card-body">
-    <h4 class="card-title">Info card title</h4>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-<div class="col-xl-2"></div>
-</div>
-</div> -->
 </body>
 </html>
