--- a/lms/src/main/resources/templates/association/associationLogin.html
+++ b/lms/src/main/resources/templates/association/associationLogin.html
@@ -41,7 +41,7 @@
     	    		</div>
 	        		<div class="col-sm-6"></div>
       			</div>
-				<button type="submit" class="btn btn-info">로그인</button>
+				<button type="submit" class="btn btn-info">로그인</button><button type="button" onclick="location.href='/insertAssociationAdmin'" class="btn btn-outline-info">협회직원등록</button>
 			</fieldset>
 		</form>
 		<p style="height: 300px"></p>
