--- a/lms/src/main/resources/templates/association/member/insertAssociationAdmin.html
+++ b/lms/src/main/resources/templates/association/member/insertAssociationAdmin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>교육원 직원 등록</title>
+<title>협회직원 등록</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/sandstone/bootstrap.min.css">
 <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script>
 <script>
@@ -64,7 +64,7 @@
 			<h1 class="display-3">직원 등록</h1><!-- 	제목	 -->
 			<!-- <p class="lead">강사로 채용 확정되신 분들만 가입을 할 수 있습니다. </p> -->
 			<hr class="my-4">
-			<p>교육원 직원만 가입을 할 수 있습니다. 교육원 직원이 아닐 시, 예고 없이 로그인이 제한될 수 있습니다.</p>
+			<p>평생교육지원협회 직원만 가입을 할 수 있습니다. 평생교육지원협회 직원이 아닐 시, 예고 없이 로그인이 제한될 수 있습니다.</p>
 			<p class="lead">
 			<form action="/insertTeacher" method="post">
 				<fieldset>
@@ -149,21 +149,8 @@
 						</div>
 					</div>
 					<!--	 회원등급	 -->
-					<input type="hidden" name="memberRank" value="교육원직원">
-					<div class="form-group">
-						<div class="col-sm-5">
-							<label for="InputInstitution">교육원</label>
-							<select class="form-control" name="institutionCode">
-								<option value="">--교육원선택--</option>
-								<option value="I1">전주평생교육원</option>
-								<option value="I2">서울평생교육원</option>
-								<option value="I3">성남평생교육원</option>
-								<option value="I4">인천평생교육원</option>
-								<option value="I5">광주평생교육원</option>
-								<option value="I6">구미평생교육원</option>
-							</select>
-						</div>
-					</div>
+					<input type="hidden" name="memberRank" value="협회직원">
+					<input type="hidden" name="institutionCode" value="I0">
 					<p style="height: 10px"></p>
 					<div class="form-group">
 					<button type="button" class="btn btn-primary">#등록</button> <button type="button" class="btn btn-secondary disabled" onclick="location.href='javascript:history.back()'">뒤로가기</button>
